--- a/firstweebpage.html
+++ b/firstweebpage.html
@@ -27,9 +27,10 @@
         <hr>
         <h2>CREATED BY ROUSHAN SHAH</h2>
 
-        <p>its very interresting to make my first web page. <br> i have completed my studys from <b>IIIT-A</b> and the
-            coding
-            culture of the college is very good</p>
+        <p>its very interresting to make my first web page.
+        <aside>hellllllllllo</aside> <br> i have completed my studys from <b>IIIT-A</b> and the
+        coding
+        culture of the college is very good</p>
 
         <h2>FOOTBALL</h2>
         <p>Association football, more commonly known as simply football or soccer,<sup>[a]</sup> is a team sport played
@@ -52,7 +53,8 @@
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Cristiano_Ronaldo_2018.jpg/330px-Cristiano_Ronaldo_2018.jpg"
                             alt="ronaldo image">
                     </p>
-                    <p>Cristiano <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Ronaldo </a> dos Santos Aveiro GOIH ComM (Portuguese pronunciation: [kɾiʃˈtjɐnu ʁɔˈnaɫdu];
+                    <p>Cristiano <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Ronaldo </a> dos Santos
+                        Aveiro GOIH ComM (Portuguese pronunciation: [kɾiʃˈtjɐnu ʁɔˈnaɫdu];
                         born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Premier
                         League club Manchester United and captains the Portugal national team. Often considered the best
                         player in the world and widely regarded as one of the greatest players of all time, Ronaldo has
@@ -93,7 +95,54 @@
 
         <h3>CHEMISTRY</h3>
         <p>H <sub>2</sub>O is know as water.</p>
+
+
+        <h3>TABLE CONCEPT APLICATION </h3>
+        <table border="1">
+            <tr>
+                <th>NAME</th>
+                <th> AGE</th>
+                <th>PERCENTAGE IN 10TH CLASS</th>
+                <th>PERCENTAGE IN 12TH CLASS</th>
+                <th>HOMETOWN</th>
+            </tr>
+        <tr>
+            <td>roushan</td>
+            <td>19</td>
+            <td>94.2%</td>
+            <td>92.2%</td>
+            <td>bihar</td>
+        </tr>
+        <tr>
+            <td>athrv</td>
+            <td>19</td>
+            <td>88%</td>
+            <td>92.8%</td>
+            <td>madhya pradhesh</td>
+        </tr>
+        <tr>
+            <td>anubha</td>
+            <td>19</td>
+            <td>90%</td>
+            <td>90%</td>
+            <td>assam</td>
+        </tr>
+    </table>
+
+
     </main>
+
+    <footer>
+        <p>this is my website .............</p>
+        <ul>
+            <li>
+                contact:9510072302
+            </li>
+            <li>
+                email: iib2021040@iiita.ac.in
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
